# 42-Connections

./: Cargo.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: cache_bin.yml  github_archive_data.yml  github_archive_data2.yml  github_minute_archive.yml  integration-test.yml
playgrounds/: playground-biggest_updated_at.mongodb.js  playground-create-index-.js  playground-creation-event-ids.js
src/: fetching.rs  fetching_event.rs  fetching_event_participation.rs  fetching_locations.rs  fetching_new_profiles_ids.rs  fetching_profile.rs  ft_api.rs  ft_mongodb.rs  ft_mongodb_app_indexor.rs  ft_mongodb_app_new_profile_index.rs  ft_mongodb_events.rs  ft_mongodb_events_participation.rs  ft_mongodb_last_update.rs  ft_mongodb_locations.rs  ft_mongodb_mode.rs  ft_mongodb_profile_indexer.rs  ft_mongodb_profiles.rs  lib.rs  main.rs
