[package]
name = "ft_connections"
description = "Collect automaticaly data from 42"
repository = "https://github.com/MathieuSoysal/42-Connections"
readme = "README.md"
version = "0.1.0"
authors = ["MathieuSoysal <hsoysal@student.42.fr>"]
license = "Apache-2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4"
env_logger = "0.11.5"
mongodb = "3.1"
serde_json = "1.0"
reqwest = { version = "0.12.23", features = ["json"] }
oauth2 = "5.0.0"
futures = "0.3"

[dev-dependencies]
testcontainers = "0.25.0"
