[package]
name = "ft_connections"
description = "Collect automaticaly data from 42"
repository = "https://github.com/MathieuSoysal/42-Connections"
readme = "README.md"
version = "0.1.0"
authors = ["MathieuSoysal <hsoysal@student.42.fr>"]
license = "Apache-2.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4"
env_logger = "0.11.5"
mongodb = { version = "3.3.0", features = ["rustls-tls"] } 
serde_json = "1.0"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
oauth2 = { version = "5.0.0", default-features = false, features = ["reqwest"] }
futures = "0.3"

[dev-dependencies]
testcontainers = "0.25.0"